--- a/Dockerfile-jdk
+++ b/Dockerfile-jdk
@@ -1,4 +1,6 @@
-FROM openjdk:11
+FROM openjdk:8
+
+ARG MIRTH_DOWNLOAD_URL='http://downloads.mirthcorp.com/connect/3.6.1.b220/mirthconnect-3.6.1.b220-unix.tar.gz'
 
 COPY mysql-apt-config_0.8.15-1_all.deb /tmp/
 
@@ -10,7 +12,7 @@ ENV LANG en_US.UTF-8
 ENV LANGUAGE en_US:en
 ENV LC_ALL en_US.UTF-8
 
-RUN curl -SL 'https://s3.amazonaws.com/downloads.mirthcorp.com/connect/3.10.1.b280/mirthconnect-3.10.1.b280-unix.tar.gz' \
+RUN curl -SL ${MIRTH_DOWNLOAD_URL} \
     | tar -xzC /opt \
     && mv "/opt/Mirth Connect" /opt/connect
 
@@ -22,8 +24,8 @@ VOLUME /opt/connect/custom-extensions
 WORKDIR /opt/connect
 RUN rm -rf cli-lib manager-lib \
     && rm mirth-cli-launcher.jar mirth-manager-launcher.jar mccommand mcmanager
-RUN (cat mcserver.vmoptions /opt/connect/docs/mcservice-java9+.vmoptions ; echo "") > mcserver_base.vmoptions
-EXPOSE 8443
+RUN (cat mcserver.vmoptions; echo "") > mcserver_base.vmoptions
+EXPOSE 8443 21000 21001 21002
 
 COPY entrypoint.sh /
 RUN chmod 755 /entrypoint.sh
